--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 body  {
-    background: rgb(6, 203, 230);
+    background:red;
 }
 
-h1{
+h1 {
     text-align: center;
 }
 
-p{
+p {
     text-align: center;
 }
 
